Fix json/converter tests
